--- a/PokemonApp/Base.lproj/Main.storyboard
+++ b/PokemonApp/Base.lproj/Main.storyboard
@@ -1,24 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PokemonApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokemon name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ves-N2-SIx">
+                                <rect key="frame" x="96.333333333333329" y="93" width="200.66666666666669" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="MNp-SZ-lxj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Experiencia:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umA-Nh-x7h">
+                                <rect key="frame" x="32" y="581.33333333333337" width="329" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="fDD-FC-ISa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGx-92-hZI">
+                                <rect key="frame" x="90.666666666666686" y="627.33333333333337" width="212" height="38.333333333333371"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="OdD-iy-IxF"/>
+                                    <constraint firstAttribute="width" constant="212" id="RhU-HH-D8R"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habilidades:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgQ-hp-hzM">
+                                <rect key="frame" x="32" y="390" width="329" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="rUK-p8-qXa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tortoise" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="E9l-fS-Tjj">
+                                <rect key="frame" x="76.666666666666686" y="153.33333333333337" width="240" height="210.99999999999994"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6C7-4X-ABK">
+                                <rect key="frame" x="32" y="426" width="329" height="130.33333333333337"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" red="1" green="0.94509803920000002" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="poC-2G-Bxq">
+                                <rect key="frame" x="32" y="673.66666666666663" width="329" height="100"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RN6-S4-0mV">
+                                        <rect key="frame" x="44.666666666666671" y="30" width="80" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="G2t-bo-za5"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="jbU-iC-dB9"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="tinted" title="-"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFh-bV-7Ui">
+                                        <rect key="frame" x="204.66666666666666" y="30" width="79.999999999999972" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Gzm-iX-GbG"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="ucm-Ce-f1S"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="tinted" title="+"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="oFh-bV-7Ui" firstAttribute="centerX" secondItem="poC-2G-Bxq" secondAttribute="centerX" constant="80" id="79c-Nu-MKm"/>
+                                    <constraint firstItem="oFh-bV-7Ui" firstAttribute="centerY" secondItem="poC-2G-Bxq" secondAttribute="centerY" id="Hg2-Cl-Cbr"/>
+                                    <constraint firstItem="RN6-S4-0mV" firstAttribute="centerX" secondItem="poC-2G-Bxq" secondAttribute="centerX" constant="-80" id="WU7-ep-MdX"/>
+                                    <constraint firstItem="RN6-S4-0mV" firstAttribute="centerY" secondItem="poC-2G-Bxq" secondAttribute="centerY" id="xAE-AN-srJ"/>
+                                    <constraint firstAttribute="height" constant="100" id="xHC-YR-uld"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iGx-92-hZI" firstAttribute="top" secondItem="umA-Nh-x7h" secondAttribute="bottom" constant="22" id="1Xx-ac-dbB"/>
+                            <constraint firstItem="umA-Nh-x7h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="2be-e5-EVZ"/>
+                            <constraint firstItem="poC-2G-Bxq" firstAttribute="top" secondItem="iGx-92-hZI" secondAttribute="bottom" constant="8" symbolic="YES" id="4o5-bk-jES"/>
+                            <constraint firstItem="6C7-4X-ABK" firstAttribute="top" secondItem="hgQ-hp-hzM" secondAttribute="bottom" constant="12" id="Bwm-7F-VVV"/>
+                            <constraint firstItem="6C7-4X-ABK" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.150235" id="D7e-W8-ahl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6C7-4X-ABK" secondAttribute="trailing" constant="32" id="DwD-Bn-iCN"/>
+                            <constraint firstItem="hgQ-hp-hzM" firstAttribute="top" secondItem="E9l-fS-Tjj" secondAttribute="bottom" constant="25" id="KgG-zD-C0L"/>
+                            <constraint firstItem="6C7-4X-ABK" firstAttribute="top" secondItem="hgQ-hp-hzM" secondAttribute="bottom" constant="12" id="LWZ-4c-kQ0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="poC-2G-Bxq" secondAttribute="trailing" constant="32" id="Sab-iP-sHe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hgQ-hp-hzM" secondAttribute="trailing" constant="32" id="UD1-Xd-HKZ"/>
+                            <constraint firstItem="Ves-N2-SIx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="34" id="UKd-zK-4lQ"/>
+                            <constraint firstItem="hgQ-hp-hzM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="Uhx-9q-rRH"/>
+                            <constraint firstItem="E9l-fS-Tjj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vdb-gE-CGK"/>
+                            <constraint firstItem="umA-Nh-x7h" firstAttribute="top" secondItem="6C7-4X-ABK" secondAttribute="bottom" constant="25" id="Vpc-dh-Pw0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="umA-Nh-x7h" secondAttribute="trailing" constant="32" id="XsU-Yc-dZ8"/>
+                            <constraint firstItem="Ves-N2-SIx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fHX-Pu-Tmm"/>
+                            <constraint firstItem="E9l-fS-Tjj" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.610687" id="gA6-d9-67a"/>
+                            <constraint firstItem="iGx-92-hZI" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hsV-ZY-6lL"/>
+                            <constraint firstItem="6C7-4X-ABK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="iN2-KC-AxQ"/>
+                            <constraint firstItem="E9l-fS-Tjj" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.247653" id="qSe-FF-upK"/>
+                            <constraint firstItem="E9l-fS-Tjj" firstAttribute="top" secondItem="Ves-N2-SIx" secondAttribute="bottom" constant="36" id="rBN-Pn-cxM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="poC-2G-Bxq" secondAttribute="bottom" constant="60" id="ugI-TT-7CX"/>
+                            <constraint firstItem="poC-2G-Bxq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="zFC-2Z-n2J"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="110.68702290076335" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tortoise" catalog="system" width="128" height="65"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
